== Version 3.1.9 (Unreleased)

* in Session::request_token params is no longer optional, you must pass all the params and the method will now extract the code
* Add access to FulfillmentService endpoint
* Fix JSON errors handling (#103)

== Version 3.1.8

* Expose `index` and `show` actions of `Location`
* Added create_permission_url and request_token helper methods
* Edited the readme to better describe the getting started procedure

== Version 3.1.7

* Expose `authors` and `tags` action on Article

== Version 3.1.6

* Add LineItem::Property resource

== Version 3.1.5

* Expose `orders` action on Customer

== Version 3.1.3

* Expose `complete` action on Fulfillment

== Version 3.1.2

* Includes port in domain URI (when other than http/80 or https/443)
* Adds access to CustomerSavedSearch
* Adds resources: Order::DefaultAddress, Client::ClientDetails, Announcement
* Allows access to Articles without a blog_id
* Moves encode and as_json overrides to ShopifyAPI::Base scope
* Exposes the `order` action in SmartCollection for general use

== Version 3.0.3

* Add a `customers` helper method to the CustomerGroup resource

== Version 3.0.2

* Brevity in require statements

== Version 3.0.1

* Fix saving nested resources in ActiveResource 3.1+

== Version 3.0.0

* Added support for OAuth Authentication
* Removal of support for Legacy Authentication
* Added Cart resource

== Version 2.3.0

* Fix double root bug with ActiveSupport 3.2.0
* Add metafields methods on Customer resource
* Fix prefix_options on assets returned from Asset.find

== Version 2.2.0

* Fix issues with resources that have both direct and namespaced routes
* Added detailed logger to help with debugging ActiveResource
requests/responses
* Add fulfillment#cancel

== Version 2.1.0

* Fix JSON errors handling
* Remove global limit from ShopifyAPI::Limits

== Version 2.0.0
