@@ -3,8 +3,11 @@ module ShopifyAPI
     include Metafields
 
     def orders
-      Order.find(:all, :params => {:customer_id => self.id})
+      Order.find(:all, params: {customer_id: self.id})
     end
 
+    def self.search(params)
+      find(:all, from: '/admin/customers/search.json', params: params)
+    end
   end
 end
